--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.5",
     "@babel/preset-react": "7.9.4",
+    "@types/react": "16.9.34",
     "babel-loader": "8.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.19.0",
     "file-loader": "6.0.0",
+    "ts-loader": "6.2.2",
+    "typescript": "3.8.3",
+    "utility-types": "3.10.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-yandex-maps": "4.2.0"
   }
 }
